--- a/package.json
+++ b/package.json
@@ -50,5 +50,12 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
-  }
+  },
+  "browserslist": [
+    "last 3 years",
+    "not dead",
+    "> 0.5%",
+    "not ie 11",
+    "not op_mini all"
+  ]
 }
